--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.h2database:h2:2.1.214'
+    testImplementation 'io.rest-assured:rest-assured:5.3.2'
+    testImplementation 'com.h2database:h2:2.2.224'
 }
 
 tasks.named('test') {
