--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testImplementation 'org.testcontainers:testcontainers:1.19.1'
     testImplementation 'org.testcontainers:junit-jupiter:1.19.1'
     testImplementation 'org.testcontainers:postgresql:1.19.1'
+    testImplementation 'org.wiremock:wiremock:3.3.1'
 }
 
 tasks.named('test') {
