--- a/src/main/resources/application-h2.yaml
+++ b/src/main/resources/application-h2.yaml
@@ -1,3 +1,7 @@
+http.clients:
+  todos:
+    url: https://jsonplaceholder.typicode.com/todos/
+
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
