--- a/src/main/resources/application-h2.yaml
+++ b/src/main/resources/application-h2.yaml
@@ -1,6 +1,6 @@
-http.clients:
-  todos:
-    url: https://jsonplaceholder.typicode.com/todos/
+external:
+  api:
+    url: http://localhost:8081/
 
 spring:
   datasource:
@@ -14,6 +14,13 @@ spring:
       properties:
         hibernate.dialect: org.hibernate.dialect.H2Dialect
         hibernate.format_sql: true
-    show-sql: true
+    show-sql: false
   flyway:
     locations: classpath:db/migration/h2
+
+logging:
+  level:
+    root: ERROR
+    org.springframework.web: ERROR
+    org.hibernate.SQL: ERROR
+    org.hibernate.type.descriptor.sql: ERROR
