--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,6 @@
-#http.clients:
-#  todos:
-#    url: https://jsonplaceholder.typicode.com/todos/
-#    port: 80
+external:
+  api:
+    url: https://jsonplaceholder.typicode.com
 
 spring:
   datasource:
@@ -10,7 +9,7 @@ spring:
     password: secret
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
       dialect: org.hibernate.dialect.PostgreSQL10Dialect
@@ -18,4 +17,9 @@ spring:
   flyway:
     locations: classpath:/db/migration/postgres
 
-
+logging:
+  level:
+    root: ERROR
+    org.springframework.web: ERROR
+    org.hibernate.SQL: ERROR
+    org.hibernate.type.descriptor.sql: ERROR
