--- a/src/main/resources/application-h2.yaml
+++ b/src/main/resources/application-h2.yaml
@@ -8,6 +8,7 @@ spring:
     username: admin
     password: secret
     driver-class-name: org.h2.Driver
+    initialization-mode: never
   jpa:
     hibernate:
       ddl-auto: update
