--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring:
     username: admin
     password: secret
     driver-class-name: org.postgresql.Driver
+    initialization-mode: never
   jpa:
     show-sql: false
     hibernate:
